fixed some styling and spacing issues

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -28,6 +28,7 @@
 .comment-area {
   padding-left: 10px;
   padding-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .inner-comment-body {
