--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -17,3 +17,7 @@ $main-border: 1px solid black;
 .comment-section {
   padding: 1em 2em 3em 2em;
 }
+
+.submit-post-button-area {
+  margin-bottom: 20px;
+}
