--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -26,7 +26,7 @@ about and about_edit pages
 
 .left-section-article-heading {
   padding-bottom: 1em;
-  margin-bottom: 2em;
+  margin-bottom: 20px;
 }
 
 .left-section-article-heading,
