--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -21,11 +21,10 @@ $primary-color: #066DEE;
 .outer-post-area {
   border-left: $main-border;
   border-right: $main-border;
-  padding: 10px;
+  padding: 20px;
 }
 
 .post-area {
-  margin-top: 20px;
   border: $main-border;
   border-bottom: none;
   padding: 10px;
