--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -45,3 +45,7 @@ $main-border: 1px solid black;
   padding-bottom: 5em;
   border-left: $main-border;
 }
+
+#right-section {
+  padding-top: 0px;
+}
